# Storage-Rust

./: Cargo.toml
src/: main.rs
src/configs/: base_config.rs  mod.rs  path_schema_config.rs
src/constants/: file_names.rs  mod.rs
src/errors/: download_error.rs  mod.rs  upload_error.rs
src/errors/handlers/: download_handler.rs  mod.rs  upload_handler.rs
src/requests/: download_requests.rs  enums.rs  mod.rs  upload_requests.rs
src/routes/: download_routes.rs  mod.rs  upload_routes.rs
src/services/: download_service.rs  mod.rs  upload_service.rs
src/utils/: mod.rs  path_builder.rs
