[package]
name = "someshit"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-files = "0.6.6"
serde = { version = "1.0.219", features = ["derive"] }
dotenv = "0.15.0"
actix-multipart = "0.7.2"
futures-util = "0.3.31"
codes-iso-639 = "0.1.5"
tokio = "1.45.1"
serde_json = "1.0.140"

[dependencies.uuid]
version = "1.17.0"
features = [
    "serde",
    "v4",
]

[media]
vtt_path = "/media/{animeId}/{episodeId}/vtt/{file-name}"
hls_master_playlist_path = "/media/{animeId}/{episodeId}/playlist.m3u8"
hls_video_segment_path = "/media/{animeId}/{episodeId}/video/{quality}/{file-name}"
hls_audio_segment_path = "/media/{animeId}/{episodeId}/audio/{studio}/{lang}/{file-name}"
subtitles_path = "/media/{animeId}/{episodeId}/subtitles"
subtitle_path = "/media/{animeId}/{episodeId}/subtitles/{lang}.vtt"
preview_path = "/media/{animeId}/{episodeId}/preview.jpg"
low_quality_poster_path = "/media/{animeId}/poster_low.jpg"
poster_path = "/media/{animeId}/poster.jpg"
chapters_path = "/media/{animeId}/{episodeId}/chapters.json"